--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                     </div>
 
-                    <div class="dp" data-aos="fade-up"><img src="src/jpg/vinnybava-min.jpg" alt=""></div>
+                    <div class="dp" data-aos="fade-up"><img src="src/webp/vinnybava-min.webp" alt=""></div>
                 </div>
             </div>
         </section>
