--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#000">
     <title>Vinod Jangid -- Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="faviconjpground.png">
+    <link rel="icon" type="image/x-icon" href="src/png/favicon.png">
     <!-- aos cdn -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- stylesheet -->
@@ -27,7 +27,7 @@
         
          
         <div class="navbar" id="navbar">
-            <div class="logo">Vinod</div>
+            <div class="logo"></div>
             <div class="navbar-tabs" id="navbar-tabs">
                 <ul class="navbar-tabs-ul">
                     <a href="#home">
