--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                         <div class="folder-icon"></div>
                         <i class="fas fa-paperclip"></i>
                     </div>
-                    <div class="about-project"><article>AQUAREGIA My College Fest Website</article>
-                <p>A webpage for My College Fest to register and participate in college's Events like Sports, Dance, Singing, E-Sports, etc.</p></div>
+                    <div class="about-project"><article>AQUAREGIA My College Fest WEBSITE</article>
+                <p>A webpage for my college fest to register and participate in college's Events like Sports, Dance, Singing, E-Sports, etc.</p></div>
             </div>
         </a>
         </div>
@@ -222,6 +222,7 @@
     <!-- main ends here -->
 
     <footer>
+        <button class="fas" id="backtotopbutton" onclick="scrolltoTopfunction()"><article>&#8592;BACK TO TOP</article> </button>
         <div class="footercontainer">
             <div class="two-words"><article>"Learning, Living, and Leveling Up."</article></div>
             <div class="social-media-container">
