--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<!-- 
+<html lang="en">
+    <!-- 
 
 ██╗░░░██╗██╗███╗░░██╗░█████╗░██████╗░
 ██║░░░██║██║████╗░██║██╔══██╗██╔══██╗
@@ -21,13 +22,11 @@ Enjoy your job. :)
 
 
 -->
-
-<html lang="en">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#000">
-    <title>Vinod Jangid -- Portfolio</title>
+    <title>Vinod Jangid | Portfolio</title>
     <link rel="icon" type="image/x-icon" href="src/png/favicon.png">
     <!-- aos cdn -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
