--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 ██╗░░██║██╔══██║██║╚████║██║░░╚██╗██║██║░░██║
 ╚█████╔╝██║░░██║██║░╚███║╚██████╔╝██║██████╔╝
 ░╚════╝░╚═╝░░╚═╝╚═╝░░╚══╝░╚═════╝░╚═╝╚═════╝░
+What are you doing here?! you sneaky developer...
 So, you are curious about my code, h?
 Do you want to steal my code and replace with your own design?
 Ok, steal it, but remember to learn how the code works.
@@ -41,7 +42,7 @@ Enjoy your job. :)
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   
   </head>
-<body>
+<body class="body">
     <audio loop="" id="audioPlayer" autoplay="" style="display:none"><source src="src/mp3/preloader.mp3" type="audio/mp3"></audio>
     <div id="preloader"></div>
    
@@ -51,7 +52,13 @@ Enjoy your job. :)
         <div class="navbar" id="navbar">
             <div class="logo">
 
-                <div class="logo-top"><img src="src/png/logo-head.png" alt=""></div>
+                <div class="logo-top">
+                    <img src="src/png/logo-headwithouteyes.png" alt="">
+                <div class="face">
+                    <div class="eye"></div>
+                    <div class="eye"></div>
+                </div>
+            </div>
                 
                 <div class="logo-bottom"><img src="src/png/logo-body.png" alt=""></div>
             </div>
@@ -287,5 +294,23 @@ Enjoy your job. :)
 	});
 </script> -->
 
+<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+<script>
+//This is a pen based off of Codewoofy's eyes follow mouse. It is just cleaned up, face removed, and then made to be a little more cartoony. https://codepen.io/Codewoofy/pen/VeBJEP
 
+$(".body").mousemove(function(event) {
+  var eye = $(".eye");
+  console.log('eye', eye)
+  var x = (eye.offset().left) + (eye.width() / 2);
+  var y = (eye.offset().top) + (eye.height() / 2);
+  var rad = Math.atan2(event.pageX - x, event.pageY - y);
+  var rot = (rad * (180 / Math.PI) * -1) + 180;
+  eye.css({
+    '-webkit-transform': 'rotate(' + rot + 'deg)',
+    '-moz-transform': 'rotate(' + rot + 'deg)',
+    '-ms-transform': 'rotate(' + rot + 'deg)',
+    'transform': 'rotate(' + rot + 'deg)'
+  });
+});
+</script>
 </html>
