--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ Enjoy your job. :)
                 <div class="logo-top">
                     <img src="src/png/logo-headwithouteyes.png" alt="">
                 <div class="face">
-                    <div class="eye"></div>
-                    <div class="eye"></div>
+                    <div class="eye"><div class="pupil"></div></div>
+                    <div class="eye"><div class="pupil"></div></div>
                 </div>
             </div>
                 
@@ -293,11 +293,9 @@ Enjoy your job. :)
         perspective:1000
 	});
 </script> -->
-
-<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+<!-- eye animation -->
+<!-- <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script>
-//This is a pen based off of Codewoofy's eyes follow mouse. It is just cleaned up, face removed, and then made to be a little more cartoony. https://codepen.io/Codewoofy/pen/VeBJEP
-
 $(".body").mousemove(function(event) {
   var eye = $(".eye");
   console.log('eye', eye)
@@ -312,5 +310,5 @@ $(".body").mousemove(function(event) {
     'transform': 'rotate(' + rot + 'deg)'
   });
 });
-</script>
+</script> -->
 </html>
