--- a/index.html
+++ b/index.html
@@ -111,10 +111,12 @@ Enjoy your job. :)
         <section class="landing-page-container" id="home">
             
             <div class="text-content">
-                <p id="hello-friend"data-aos="fade"data-aos-delay="100" data-aos-duration="3000">Namaste(); I'm</p>
-                <span id="name" data-aos="fade"data-aos-delay="500" data-aos-duration="3000">Vinod Jangid.</span>
-                <p id="work" data-aos="fade"data-aos-delay="1000" data-aos-duration="3000">I build things for the web.</p>
-                <p id="info-para" data-aos="fade"data-aos-delay="1500" data-aos-duration="3000">Web Developer with experience of Visual Concept Arts, Fronted Web Designs. I Love fun Web UI, collaboration and making products.<br> 
+                <article id="hello-friend"data-aos="fade"data-aos-delay="100" data-aos-duration="3000"><p class="jello">N</p><p class="jello">a</p><p class="jello">m</p><p class="jello">a</p><p class="jello">s</p><p class="jello">t</p><p class="jello">e</p><p class="jello">(</p><p class="jello">)</p><p class="jello">;</p>&nbsp;<p class="jello">I</p><p class="jello">'</p><p class="jello">m</p></article>
+                <article id="name" data-aos="fade"data-aos-delay="500" data-aos-duration="3000"><p class="jello">V</p><p class="jello">i</p><p class="jello">n</p><p class="jello">o</p><p class="jello">d</p>&nbsp;<p class="jello">J</p><p class="jello">a</p><p class="jello">n</p><p class="jello">g</p><p class="jello">i</p><p class="jello">d</p><p class="jello">.</p></article>
+
+
+                <article id="work" data-aos="fade"data-aos-delay="1000" data-aos-duration="3000"><p class="jello">I</p>&nbsp;<p class="jello">c</p><p class="jello">o</p><p class="jello">d</p><p class="jello">e</p>&nbsp;<p class="jello">t</p><p class="jello">h</p><p class="jello">i</p><p class="jello">n</p><p class="jello">g</p><p class="jello">s</p>&nbsp;<p class="jello">f</p><p class="jello">o</p><p class="jello">r</p>&nbsp;<p class="jello">w</p><p class="jello">e</p><p class="jello">b</p><p class="jello">.</p></article>
+                <p id="info-para" data-aos="fade"data-aos-delay="1500" data-aos-duration="3000">Web Developer with experience of Digital Concept Arts, Frontend Web Designs. I Love fun Web UI, collaboration and making products.<br> 
                     <br> I value simple content structure, clean design patterns, and thoughtful interactions.</p>
                 <div class="contact-btn-div"data-aos="fade"
                 data-aos-delay="2000" data-aos-duration="3000">
@@ -151,7 +153,7 @@ Enjoy your job. :)
                 <div class="info-dp-section">
                     <div class="about-info">
                         <p>Hi! My name is Vinod i'm a Web Developer and Digital Visual Artist, I love creating things that exists on the internet. My interest in web development started in 2021 when i thought to upload my Digital Concept Arts Online.</p> <br>
-                        <p>Instead of making a online Concepts Art website, i started enjoying web development. Creating custom things for web taught me a lot about HTML & CSS! </p> <br>
+                        <p>Instead of making a online Concepts Art website, i started enjoying web development. Creating custom things for web taught me a lot about design & development! </p> <br>
                            <p> My main focus these days is building interesting & creative web designs, I like to code things from scratch, and enjoy bringing ideas to life in the browser.</p>
 
                     </div>
