--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Enjoy your job. :)
 
                     </div>
 
-                    <div class="dp" data-aos="fade-up"><img src="src/webp/vinnybava-min.webp" alt=""></div>
+                    <div class="dp" data-aos="fade-up"><img src="src/jpg/vinnybava.jpg" alt=""></div>
                 </div>
             </div>
         </section>
