--- a/index.html
+++ b/index.html
@@ -111,15 +111,15 @@ Enjoy your job. :)
         <section class="landing-page-container" id="home">
             
             <div class="text-content">
-                <article id="hello-friend"data-aos="fade"data-aos-delay="100" data-aos-duration="3000"><p class="jello">N</p><p class="jello">a</p><p class="jello">m</p><p class="jello">a</p><p class="jello">s</p><p class="jello">t</p><p class="jello">e</p><p class="jello">(</p><p class="jello">)</p><p class="jello">;</p>&nbsp;<p class="jello">I</p><p class="jello">'</p><p class="jello">m</p></article>
-                <article id="name" data-aos="fade"data-aos-delay="500" data-aos-duration="3000"><p class="jello">V</p><p class="jello">i</p><p class="jello">n</p><p class="jello">o</p><p class="jello">d</p>&nbsp;<p class="jello">J</p><p class="jello">a</p><p class="jello">n</p><p class="jello">g</p><p class="jello">i</p><p class="jello">d</p><p class="jello">.</p></article>
+                <article id="hello-friend"data-aos="fade-up"data-aos-delay="100" data-aos-duration="1000"><p class="jello">N</p><p class="jello">a</p><p class="jello">m</p><p class="jello">a</p><p class="jello">s</p><p class="jello">t</p><p class="jello">e</p><p class="jello">(</p><p class="jello">)</p><p class="jello">;</p>&nbsp;<p class="jello">I</p><p class="jello">'</p><p class="jello">m</p></article>
+                <article id="name" data-aos="fade-up"data-aos-delay="500" data-aos-duration="1000"><p class="jello">V</p><p class="jello">i</p><p class="jello">n</p><p class="jello">o</p><p class="jello">d</p>&nbsp;<p class="jello">J</p><p class="jello">a</p><p class="jello">n</p><p class="jello">g</p><p class="jello">i</p><p class="jello">d</p><p class="jello">.</p></article>
 
 
-                <article id="work" data-aos="fade"data-aos-delay="1000" data-aos-duration="3000"><p class="jello">I</p>&nbsp;<p class="jello">c</p><p class="jello">o</p><p class="jello">d</p><p class="jello">e</p>&nbsp;<p class="jello">t</p><p class="jello">h</p><p class="jello">i</p><p class="jello">n</p><p class="jello">g</p><p class="jello">s</p>&nbsp;<p class="jello">f</p><p class="jello">o</p><p class="jello">r</p>&nbsp;<p class="jello">w</p><p class="jello">e</p><p class="jello">b</p><p class="jello">.</p></article>
-                <p id="info-para" data-aos="fade"data-aos-delay="1500" data-aos-duration="3000">Web Developer with experience of Digital Concept Arts, Frontend Web Designs. I Love fun Web UI, collaboration and making products.<br> 
+                <article id="work" data-aos="fade-up"data-aos-delay="1000" data-aos-duration="1000"><p class="jello">I</p>&nbsp;<p class="jello">c</p><p class="jello">o</p><p class="jello">d</p><p class="jello">e</p>&nbsp;<p class="jello">t</p><p class="jello">h</p><p class="jello">i</p><p class="jello">n</p><p class="jello">g</p><p class="jello">s</p>&nbsp;<p class="jello">f</p><p class="jello">o</p><p class="jello">r</p>&nbsp;<p class="jello">w</p><p class="jello">e</p><p class="jello">b</p><p class="jello">.</p></article>
+                <p id="info-para" data-aos="fade-up"data-aos-delay="1500" data-aos-duration="1000">Web Developer with experience of Digital Concept Arts, Frontend Web Designs. I Love fun Web UI, collaboration and making products.<br> 
                     <br> I value simple content structure, clean design patterns, and thoughtful interactions.</p>
-                <div class="contact-btn-div"data-aos="fade"
-                data-aos-delay="2000" data-aos-duration="3000">
+                <div class="contact-btn-div"data-aos="fade-up"
+                data-aos-delay="2000" data-aos-duration="1000">
                 
                     <a href="mailto:infovinodjangid@gmail.com">
                     <button class="contact-btn" id="contact-btn">LetsTalk();
