--- a/index.html
+++ b/index.html
@@ -287,9 +287,9 @@ Enjoy your job. :)
     </script>
 
     <!-- tilt js -->
-    <script type="text/javascript" src="vanilla-tilt.js"></script>
-<!-- <script type="text/javascript">
-	VanillaTilt.init(document.querySelectorAll(".none"), {
+    <!-- <script type="text/javascript" src="vanilla-tilt.js"></script>
+<script type="text/javascript">
+	VanillaTilt.init(document.querySelectorAll(".language-name"), {
 		max: 25,
 		speed: 100,
         perspective:1000
