--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ Enjoy your job. :)
 
 
 -->
+
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
