Meta tags Update

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@ Enjoy your job. :)
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000">
-    <meta name="description" content="Vinod Jangid | Portfolio, visit and know about me & my projects/designs." />
-    <meta name="keywords" content="Vinod Jangid, vinod jangid portfolio" />
-    <meta name="author" content="Vinod Jangid" />
-
-    <meta property="og:title" content="" />
-    <meta property="og:image" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:site_name" content="" />
-    <meta property="og:description" content="" />
-    <meta name="twitter:title" content="" />
-    <meta name="twitter:image" content="" />
-    <meta name="twitter:url" content="" />
-    <meta name="twitter:card" content="" />
+     <meta name="description" content="Vinod Jangid | Portfolio, Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." >
+    <meta name="keywords" content="vinod jangid, vinod jangid portfolio,Vinod Jangid Portfolio, vinodjangid, vinod jangid github" >
+    <meta name="author" content="Vinod Jangid" >
+<!-- 
+    <meta property="og:title" content="" >
+    <meta property="og:image" content="" >
+    <meta property="og:url" content="" >
+    <meta property="og:site_name" content="" >
+    <meta property="og:description" content="" >
+    <meta name="twitter:title" content="" >
+    <meta name="twitter:image" content="" >
+    <meta name="twitter:url" content="" >
+    <meta name="twitter:card" content="" > -->
 
     <title>Vinod Jangid | Portfolio</title>
     <link rel="icon" type="image/x-icon" href="src/png/favicon.png">
