--- a/index.html
+++ b/index.html
@@ -383,8 +383,8 @@ What are you doing here?! you sneaky developer...
 <script>
 
   document.getElementById("resume-btn").addEventListener("click", function () {
-    var fileUrl = "src/pdf/vinod jangid resume.pdf";
-    saveAs(fileUrl, "resume.pdf");
+    var fileUrl = "src/pdf/Vinod Jangid Resume.pdf";
+    saveAs(fileUrl, "Resume.pdf");
   });
 </script>
 
