--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ What are you doing here?! you sneaky developer...
 -->
 <!-- , user-scalable=no -->
 <head>
+    <meta name="google-site-verification" content="zMNl24ruDnyqiliYwKNU_r09OkPCDKz0kMBtF9nqiCc" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
