--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ What are you doing here?! you sneaky developer...
     <meta name="twitter:url" content="" >
     <meta name="twitter:card" content="" > -->
     <title>Vinod Jangid | Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="src/png/favicon.png">
+    <link rel="icon" type="image/x-icon" href="src/jpg/profile-pic (3).png">
     <!-- aos cdn -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- stylesheet -->
