--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ What are you doing here?! you sneaky developer...
                 <div class="section-heading"><article class="section-heading-article" tabindex="0"aria-label="My projects starts from here">&#60;/Projects&#62;</article><p class="sectionHeadingP"></p></div>
                 <div class="project-boxes-div">
 
-                    <a href="https://axocean.github.io/AXOCEAN/" target="_blank"><div class="project-box project-box1" id="project-box1">
+                    <a href="https://vinodjangid07.github.io/AXOCEAN/" target="_blank"><div class="project-box project-box1" id="project-box1">
                     <div class="info-div">
                         <img src="src/webp/axocean-favicon.webp" alt="" class="faviconforProject">
                         <article class="ProjectHeading">AXOCEAN</article>
@@ -282,7 +282,7 @@ What are you doing here?! you sneaky developer...
                     <div class="image-div"><img src="src/webp/AXOCEAN-project.webp" alt=""></div>
                 </div></a>
 <!-- ---------------------- -->
-                <a href="https://aquaregiafest.com" target="_blank"><div class="project-box project-box2" id="project-box2">
+                <a href="https://vinodjangid07.github.io/Aquaregia" target="_blank"><div class="project-box project-box2" id="project-box2">
                     <div class="info-div">
                         <img src="src/svg/aquaregia-favicon.svg" alt="" class="faviconforProjectAquaregia">
                         <article class="ProjectHeading">Aquaregia</article>
