Meta tag Update

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ What are you doing here?! you sneaky developer...
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000">
     <meta name="description" content="Vinod Jangid | Portfolio, Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." >
-    <meta name="keywords" content="vinod jangid, vinod jangid portfolio, Vinod Jangid Portfolio, vinodjangid, vinod jangid github, vinodjangid me, vinodjangid uiverse, uiverse, vinod jangid uiverse, vinod jangid frontend developer, frontend developer, vinod jangid jaipur, vinod jaipur" >
+    <meta name="keywords" content="vinod jangid, vinod jangid portfolio, Vinod Jangid Portfolio, vinodjangid, vinod jangid github, vinodjangid site, vinodjangid uiverse, uiverse, vinod jangid uiverse, vinod jangid frontend developer, frontend developer, vinod jangid jaipur, vinod jaipur" >
     <meta name="author" content="Vinod Jangid" >
     <meta property="og:image" content="https://www.vinodjangid.me/src/webp/vinod%20(2).webp" >
 <!-- 
