Meta tag Update

--- a/index.html
+++ b/index.html
@@ -37,16 +37,18 @@ What are you doing here?! you sneaky developer...
     <meta name="keywords" content="vinod jangid, vinod jangid portfolio, Vinod Jangid Portfolio, vinodjangid, vinod jangid github, vinodjangid site, vinodjangid uiverse, uiverse, vinod jangid uiverse, vinod jangid frontend developer, frontend developer, vinod jangid jaipur, vinod jaipur" >
     <meta name="author" content="Vinod Jangid" >
     <meta property="og:image" content="https://www.vinodjangid.me/src/webp/vinod%20(2).webp" >
-<!-- 
-    <meta property="og:title" content="" >
+
+
+    <meta property="og:title" content="Vinod Jangid | Portfolio">
+    <meta property="og:description" content="Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions.">
     
-    <meta property="og:url" content="" >
-    <meta property="og:site_name" content="" >
-    <meta property="og:description" content="" >
-    <meta name="twitter:title" content="" >
-    <meta name="twitter:image" content="" >
-    <meta name="twitter:url" content="" >
-    <meta name="twitter:card" content="" > -->
+    <meta property="og:url" content="https://vinodjangid.site">
+    <meta property="og:site_name" content="Vinod Jangid Portfolio" >
+    <meta name="twitter:title" content="Vinod Jangid | Portfolio" >
+    <meta name="twitter:image" content="https://www.vinodjangid.me/src/webp/vinod%20(2).webp" >
+    <meta name="twitter:url" content="https://vinodjangid.site" >
+
+
     <title>Vinod Jangid | Portfolio</title>
     <link rel="icon" type="image/x-icon" href="src/jpg/profile-pic (3).png">
     <!-- aos cdn -->
