Meta tag and robots txt update

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
 ░╚════╝░╚═╝░░╚═╝╚═╝░░╚══╝░╚═════╝░╚═╝╚═════╝░
 What are you doing here?! you sneaky developer...
 -->
-<!-- , user-scalable=no -->
 <head>
-    <!-- Google tag (gtag.js) -->
+  <!-- don't forget to remove this >>>>(google tag manager) script, if you are using this page/code -->
+    <!-- don't forget to remove this >>>>(google tag manager) script, if you are using this page/code -->
+      <!-- don't forget to remove this >>>>(google tag manager) script, if you are using this page/code -->
+        <!-- don't forget to remove this >>>>(google tag manager) script, if you are using this page/code -->
+  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YMWDE0VTD3"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -26,9 +29,19 @@ What are you doing here?! you sneaky developer...
   gtag('js', new Date());
 
   gtag('config', 'G-YMWDE0VTD3');
+  
 </script>
-
+<!-- don't forget to remove this >>(google site verification meta tag) tag, if you are using this page/code -->
+<!-- don't forget to remove this >>(google site verification meta tag) tag, if you are using this page/code -->
+<!-- don't forget to remove this >>(google site verification meta tag) tag, if you are using this page/code -->
+<!-- don't forget to remove this >>(google site verification meta tag) tag, if you are using this page/code -->
     <meta name="google-site-verification" content="zMNl24ruDnyqiliYwKNU_r09OkPCDKz0kMBtF9nqiCc" />
+    <!-- don't forget to remove this >>(google site verification meta tag) tag, if you are using this page/code -->
+    <!-- don't forget to remove this >>(google site verification meta tag) tag, if you are using this page/code -->
+    <!-- don't forget to remove this >>(google site verification meta tag) tag, if you are using this page/code -->
+
+
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -295,7 +308,7 @@ What are you doing here?! you sneaky developer...
                     <div class="info-div">
                         <img src="src/svg/aquaregia-favicon.svg" alt="" class="faviconforProjectAquaregia">
                         <article class="ProjectHeading">Aquaregia</article>
-                        <p class="ProjectDescription">A website for University Maharaja College fest "Aquaregia" for event registerations.</p>
+                        <p class="ProjectDescription">A website for University Maharaja College fest "Aquaregia" for event registrations.</p>
                         <button class="cta">
                             <span>See the Live Site</span>
                             <svg viewBox="0 0 13 10" height="10px" width="15px">
