--- a/index.html
+++ b/index.html
@@ -392,10 +392,11 @@ What are you doing here?! you sneaky developer...
     <!-- main ends here -->
 
     <footer id="footer">
+      <button class="fas" id="backtotopbutton" onclick="scrolltoTopfunction()"><article aria-label="Back to top">&#8592;BACK TO TOP</article></button>
         <div class="footer-background">
           <div class="footer-blob"></div>
         </div>
-        <div class="footer-foreground"><button class="fas" id="backtotopbutton" onclick="scrolltoTopfunction()"><article aria-label="Back to top">&#8592;BACK TO TOP</article></button>
+        <div class="footer-foreground">
           <div class="footercontainer">
               <div class="two-words"><article tabindex="0"aria-label="Learning, Living, and Leveling Up, my quote">"Learning, Living, and Leveling Up."</article></div>
               <div class="social-media-container">
