text content update

--- a/index.html
+++ b/index.html
@@ -282,14 +282,11 @@ What are you doing here?! you sneaky developer...
         <div class="info-dp-section">
           <div class="about-info">
             <p tabindex="0">
-              Hi! My name is Vinod i'm a Web Developer and Digital Visual
-              Artist, I love creating things that exists on the internet. My
-              interest in web development started in 2021 when i thought to
-              upload my Digital Concept Arts Online.
+              Hi! My name is Vinod. I'm a web developer and digital visual artist. I love creating things that exist on the internet. My interest in web development started in 2021 when I decided to upload my digital concept arts online.
             </p>
             <br />
             <p tabindex="0">
-              Instead of making a online Concepts Art website, i started
+              Instead of creating an online Concepts Art website, i started
               enjoying web development. Creating custom things for web taught
               me a lot about design & development!
             </p>
