Project Url Update

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ What are you doing here?! you sneaky developer...
                     aria-label="Visit Netflix clone on GitHub">
                     <img src="src/svg/github.svg" alt="github redirect button" />
                   </a>
-                  <a href="https://react-netflix-clone20.netlify.app/" target="_blank" class="cta"
+                  <a href="https://react-project-20.netlify.app/" target="_blank" class="cta"
                     aria-label="Visit netflix clone live">
                     <span>Live view</span>
                     <svg viewBox="0 0 13 10" height="10px" width="15px">
