meta tag update

--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@ What are you doing here?! you sneaky developer...
   <meta name="keywords"
     content="vinod jangid,vinod jangid portfolio,Vinod Jangid Portfolio,vinodjangid,vinod jangid site,Vinod Jangid Site,vinod jangid me,vinod jangid web,vinod jangid github,vinodjangid site,vinodjangid uiverse,uiverse,vinod jangid uiverse,vinod jangid frontend developer,frontend developer,vinod jangid jaipur,vinod jaipur" />
   <meta name="author" content="Vinod Jangid" />
-  <meta property="og:image" content="https://www.vinodjangid.site/src/webp/vinod%20(2).webp" />
+  <meta property="og:image" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" />
 
   <meta property="og:title" content="Vinod Jangid | Portfolio" />
   <meta property="og:description"
-    content="Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
+    content="Hi! My name is Vinod. I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
 
   <meta property="og:url" content="https://vinodjangid.site" />
   <meta property="og:site_name" content="Vinod Jangid Portfolio" />
   <meta name="twitter:title" content="Vinod Jangid | Portfolio" />
-  <meta name="twitter:image" content="https://www.vinodjangid.site/src/webp/vinod%20(2).webp" />
-  <meta name="twitter:url" content="https://vinodjangid.site" />
-
+  <meta name="twitter:image:src" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" />
+  <meta property="twitter:description"
+  content="Hi! My name is Vinod. I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
   <title>Vinod Jangid | Portfolio</title>
   <link rel="icon" type="image/x-icon" href="src/png/main-favicon.png" />
   <!-- aos cdn -->
