--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@ What are you doing here?! you sneaky developer...
         <div class="footer-bottom">
           <article>
             Design & Built by Vinod Jangid
-            <i class="far fa-copyright"></i> twentytwentythree
+            &#169; twentytwentythree
           </article>
         </div>
       </div>
