--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ What are you doing here?! you sneaky developer...
       <div class="hey">Hey!</div>
       <div class="logo" tabindex="0" aria-label="vinod jangid logo">
         <div class="logo-top">
-          <img src="src/png/nav-avatar.png" alt="animation-head" />
+          <img src="src/png/nav-avatar.png" alt="animation-head" id="nav-avatar"/>
         </div>
       </div>
       <div class="navbar-tabs" id="navbar-tabs">
@@ -645,7 +645,7 @@ What are you doing here?! you sneaky developer...
           </div>
         </div>
         <div class="footer-avatar-container">
-          <img src="src/png/footer-avatar-vinod.png" alt="animation-head" class="footer-avatar-img" />
+          <img src="src/png/nav-avatar.png" alt="animation-head" class="footer-avatar-img" id="footer-wala-avatar"/>
           <div class="footer-avatar-face">
             <div class="footer-avatar-eye footer-left-eye">
               <div class="footer-pupil"></div>
