--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@ What are you doing here?! you sneaky developer...
           </div>
         </div>
         <div class="footer-avatar-container">
-          <img src="src/png/nav-avatar.png" alt="animation-head" class="footer-avatar-img" id="footer-wala-avatar"/>
+          <img src="src/png/footer-avatar-vinod.png" alt="animation-head" class="footer-avatar-img" id="footer-wala-avatar"/>
           <div class="footer-avatar-face">
             <div class="footer-avatar-eye footer-left-eye">
               <div class="footer-pupil"></div>
