--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@ What are you doing here?! you sneaky developer...
 
   <script>
     function openURL() {
-      var url = "src/pdf/Vinod Jangid Resume.pdf";
+      var url = "src/pdf/Vinod's Resume.pdf";
 
       window.open(url, "_blank");
     }
