twitter card preview update

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@ What are you doing here?! you sneaky developer...
   <meta property="og:url" content="https://vinodjangid.site" />
   <meta property="og:site_name" content="Vinod Jangid Portfolio" />
 
-  <meta name="twitter:image:src" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" />
-  <meta name="twitter:site" content="@Portfolio" />
-  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@Vinod_Jangid07" />
   <meta name="twitter:title" content="Vinod Jangid | Portfolio" />
   <meta name="twitter:description"
   content="Hi! My name is Vinod. I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
+  <meta name="twitter:image" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" />
   <title>Vinod Jangid | Portfolio</title>
   <link rel="icon" type="image/x-icon" href="src/png/main-favicon.png" />
   <!-- aos cdn -->
