--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ What are you doing here?! you sneaky developer...
                     aria-label="Visit Pexelicons on GitHub">
                     <img src="src/svg/github.svg" alt="github redirect button" />
                   </a>
-                  <a href="https://vinodjangid.site/Pexelicons/" target="_blank" class="cta"
+                  <a href="https://vinodjangid07.github.io/Pexelicons/" target="_blank" class="cta"
                     aria-label="Visit Pexelicons Live">
                     <span>Live view</span>
                     <svg viewBox="0 0 13 10" height="10px" width="15px">
@@ -485,7 +485,7 @@ What are you doing here?! you sneaky developer...
                     aria-label="Visit Aquaregia on GitHub">
                     <img src="src/svg/github.svg" alt="github redirect button" />
                   </a>
-                  <a href="https://vinodjangid.site/Aquaregia/" target="_blank" class="cta"
+                  <a href="https://vinodjangid07.github.io/Aquaregia/" target="_blank" class="cta"
                     aria-label="Visit Aquaregia Live">
                     <span>Live view</span>
                     <svg viewBox="0 0 13 10" height="10px" width="15px">
@@ -514,7 +514,7 @@ What are you doing here?! you sneaky developer...
                     aria-label="Visit qr generator on github">
                     <img src="src/svg/github.svg" alt="github redirect button" />
                   </a>
-                  <a href="https://vinodjangid.site/QR-Generator/" target="_blank" class="cta"
+                  <a href="https://vinodjangid07.github.io/QR-Generator/" target="_blank" class="cta"
                     aria-label="Visit qr generator live">
                     <span>Live view</span>
                     <svg viewBox="0 0 13 10" height="10px" width="15px">
@@ -578,7 +578,7 @@ What are you doing here?! you sneaky developer...
                     aria-label="Visit axocean on GitHub">
                     <img src="src/svg/github.svg" alt="github redirect button" />
                   </a>
-                  <a href="https://www.vinodjangid.site/AXOCEAN/" target="_blank" class="cta"
+                  <a href="https://vinodjangid07.github.io/AXOCEAN/" target="_blank" class="cta"
                     aria-label="Visit axocean live">
                     <span>Live view</span>
                     <svg viewBox="0 0 13 10" height="10px" width="15px">
