tech stack update

--- a/index.html
+++ b/index.html
@@ -356,7 +356,17 @@ What are you doing here?! you sneaky developer...
 
             <li class="tech-stack-box" data-aos="fade-up">
               <img src="./src/png/reactlogo.png" alt="react skill" class="tech-stack-logo" />
-              <span class="tooltip">REACT</span>
+              <span class="tooltip">REACTJS</span>
+            </li>
+
+            <li class="tech-stack-box" data-aos="fade-up">
+              <img src="./src/png/nextlogo.png" alt="nextjs skill" class="tech-stack-logo" />
+              <span class="tooltip">NEXTJS</span>
+            </li>
+
+            <li class="tech-stack-box" data-aos="fade-up">
+              <img src="./src/png/astro.png" alt="astro skill" class="tech-stack-logo" />
+              <span class="tooltip">ASTRO</span>
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
@@ -368,6 +378,17 @@ What are you doing here?! you sneaky developer...
               <img src="./src/png/gitlogo.png" alt="git skill" class="tech-stack-logo" />
               <span class="tooltip">GIT</span>
             </li>
+
+            <li class="tech-stack-box" data-aos="fade-up">
+              <img src="./src/png/tinacms.png" alt="tinacms skill" class="tech-stack-logo" />
+              <span class="tooltip">TINACMS</span>
+            </li>
+
+            <li class="tech-stack-box" data-aos="fade-up">
+              <img src="./src/png/contentfulcms.png" alt="contentful skill" class="tech-stack-logo" />
+              <span class="tooltip">CONTENTFUL</span>
+            </li>
+
 
             <li class="tech-stack-box" data-aos="fade-up">
               <img src="./src/png/clogo.png" alt="c language skill" class="tech-stack-logo" />
@@ -392,11 +413,6 @@ What are you doing here?! you sneaky developer...
             <li class="tech-stack-box" data-aos="fade-up">
               <img src="./src/png/ailogo.png" alt="adobe illustrator skill" class="tech-stack-logo" />
               <span class="tooltip">ADOBE AI</span>
-            </li>
-
-            <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/canvalogo.png" alt="canva skill" class="tech-stack-logo" />
-              <span class="tooltip">CANVA</span>
             </li>
           </ul>
         </div>
