tech stack update

--- a/index.html
+++ b/index.html
@@ -365,6 +365,11 @@ What are you doing here?! you sneaky developer...
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
+              <img src="./src/png/node.png" alt="nodejs skill" class="tech-stack-logo" />
+              <span class="tooltip">NODEJS</span>
+            </li>
+
+            <li class="tech-stack-box" data-aos="fade-up">
               <img src="./src/png/astro.png" alt="astro skill" class="tech-stack-logo" />
               <span class="tooltip">ASTRO</span>
             </li>
