--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <meta property="og:image" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" />
   <meta property="og:title" content="Daichi Yoshioka | Portfolio" />
   <meta property="og:description"
-    content="Hi! My name is Vinod. I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
+    content="Hi! My name is Daichi Yoshioka. I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
 
   <meta property="og:url" content="https://vinodjangid.site" />
   <meta property="og:site_name" content="Daichi Yoshioka Portfolio" />
